--- a/templates/detail.html
+++ b/templates/detail.html
@@ -18,15 +18,15 @@
 
 {% for journal in entries %}
 
-<form method='GET' action=''>
+<div id="entry">
   <div class="row">
-    <div class="six columns">
+    <div class="title">
       {{ journal.title }}
     </div>
   </div>
   <div class="row">
-    <div class="six columns">
-      {{ journal.date }}
+    <div class="six columns date">
+      Posted on {{ journal.date }}
     </div>
   </div>
   <div class="row">
@@ -35,16 +35,19 @@
     </div>
   </div>
   <div class="row">
-    <div class="six columns">
+    <div class="label">
+      What I learned
+    </div>
+    <div class="learned">
       {{ journal.learnt }}
     </div>
   </div>
   <div class="row">
     <div class="six columns">
-      {{ journal.resources }}
+      Resources: {{ journal.resources }}
     </div>
   </div>
-</form>
+</div>
 {% endfor %}
 
 {% endblock %}
